add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -84,14 +84,12 @@
             </nav>
 
             <main>
-                <!-- Sidebar section -->
-                //image for the website
+                <!-- Sidebar section (Image for the Website) -->             
                 <div class="sidebar">
                 <img class="sidebar-img" src="https://i.pinimg.com/originals/2b/a0/4d/2ba04d9ad943d25adff7ba311c8c1bc6.jpg">
                 </div>
 
-                <!-- Content section -->
-                //information about me
+                <!-- Content section (Information about me) -->
                 <div class="content">
                     <h2>Dhruv Patel</h2>
                     <p>Student at Operation Spark</p>
